[tool.poetry]
name = "memory-repo"
version = "0.1.0"
description = "Query API similar to Django ORM for Python objects and dictionaries"
authors = [
  "twocucao <twocucao@gmail.com>",
  "Said Ali <said.ali@msn.com>",
]
readme = "README.md"
packages = [{include = "memory_repo"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
